[package]
name = "life-cursive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "*"

[dependencies.cursive]
version = "*"
default-features = false
features = ["pancurses-backend"]

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]
